# scoring-sync

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
docs/superpowers/specs/: 2026-04-14-net-grading-sync-design.md
src/net_grading/: __init__.py  app.py  config.py  crypto.py
src/net_grading/auth/: middleware.py  session.py  site2_creds.py
src/net_grading/db/: engine.py  models.py
src/net_grading/db/migrations/: env.py
src/net_grading/db/migrations/versions/: 2dddf6f43273_init_schema.py  4f8d2a1b9c3e_add_login_records.py  772a27ebf0b1_add_users_welcomed_flag.py  913d641c1cb8_add_user_sync_flags.py
src/net_grading/routes/: auth.py  conflicts.py  grading.py  rate_limit.py  settings.py  templating.py
src/net_grading/sites/: base.py  errors.py  site1.py  site2.py  site3.py
src/net_grading/static/js/: grade.js
src/net_grading/sync/: local.py  orchestrator.py  pull.py  recheck.py  sse.py
src/net_grading/templates/: base.html  conflicts.html  dashboard.html  error.html  grade.html  login.html  settings.html  welcome.html
src/net_grading/templates/components/: score_input.html
