[project]
name = "net-grading"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "httpx[http2]>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.10",
    "pydantic-settings>=2.10",
    "python-multipart>=0.0.26",
    "sqlalchemy[asyncio]>=2.0.49",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/net_grading"]
